--- a/styles/detailpagina.css
+++ b/styles/detailpagina.css
@@ -1,146 +1,106 @@
-.off-screen-menu {
-    background-color: var(--wit);
-    height: 100vh;
-    width: 100%;
-    max-width: 450px;
-    position: fixed;
-    top: 0;
-    right: -450px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-    padding-left: 1.5rem;
-    font-size: 3rem;
-    transition: .3s ease;
-    opacity: 100%;
-
-    a {
-        font-size: 1rem;
-    }
-    img {
-        height: 1rem;
-    }
-
-    @media (width > 66rem) {
-        position: relative;
-        max-width: 100%;
-        height: fit-content;
-        right: auto;
-
-        ul {
-            display: flex;
-            flex-direction: row;
-            gap: 1rem;
-        }
-
-        .right-container {
-            margin-left: auto;
-            display: flex;
-            gap: 1rem;
-        }
-
-        a {
-            color: var(--zwart);
-        }
-    }
-
+@font-face {
+    font-family: "archivo";
+    src: url("/assets/Archivo-VariableFont_wdth,wght.ttf");
 }
 
-.off-screen-menu.active {
-    right: 0;
-
-    header::before {
-        right: 0;
-    }
+@font-face {
+    font-family: "martianmono";
+    src: url("/assets/MartianMono-VariableFont_wdth,wght.ttf");
 }
 
-nav {
-    padding: .75rem 1rem .75rem 1rem;
-    display: flex;
-    border-bottom: var(--border);
-    background-color: var(--wit);
+:root {
+    --zwart: #222226;
+    --grijs: #666666;
+    --wit: #FFFFFF;
+    --blauw: rgb(54, 75, 247);
+
+    --border: 1px solid black;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+p {
+    font-family: "archivo";
+    font-size: 1rem;
 
     @media (width > 30rem) {
         font-size: 1.25rem;
     }
 
-    @media (width > 44rem) {
-        border-bottom: 0px;
-    }
-
-    @media (width > 66rem) {
+    @media (width > 48rem) {
         font-size: 1.5rem;
-        border-bottom: none;
-        padding: 3rem;
+    }
+}
+p.label {
+    font-weight: light;
+    border: var(--border);
+    padding: 4px;
+    width: fit-content;
+    font-size: 1rem;
+    text-transform: uppercase;
+
+    abbr {
+        text-decoration: none;
+    }
+}
+p.data {
+    font-family: "martianmono";
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+
+a {
+    font-family: "martianmono";
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 1rem;
+    color: var(--zwart);
+}
+a.blauwe-link {
+    color: var(--blauw);
+}
+
+h1 {
+    font-family: "archivo";
+    font-size: 3em;
+    line-height: 3rem;
+    text-transform: uppercase;
+    font-weight: 600;
+
+    @media (width > 30rem) {
+        font-size: 4rem;
+    }
+
+    @media (width > 48rem) {
+        font-size: 6rem;
+    }
+
+
+}
+
+h2 {
+    display: none;
+}
+
+h3 {
+    font-family: "archivo";
+    text-transform: uppercase;
+    font-size: 2rem;
+    hyphens: auto;
+
+    @media (width > 30rem) {
+        font-size: 2.5rem;
+    }
+
+    @media (width > 48rem) {
+        font-size: 3rem;
     }
 }
 
-header::before {
-    content: '';
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0);
-    left: 0;
-    top: 0;
-    transition: background-color 0.4s ease-out;
-}
-
-body:has(header .active) {
-    header::before {
-        background-color: rgba(0, 0, 0, 0.3);
-    }
-}
-
-.ham-menu {
-    height: 50px;
-    width: 40px;
-    margin-left: auto;
-    position: relative;
-    border: 1px solid;
-    height: 2.5rem;
-    width: 2.5rem;
-    background-color: var(--wit);
-
-    @media (width > 66rem) {
-        display: none;
-    }
-}
-
-.ham-menu.active {
-    position: sticky;
-}
-
-.ham-menu span {
-    height: 3px;
-    width: 24px;
-    background-color: var(--zwart);
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    transition: .3s ease;
-}
-
-.ham-menu span:nth-child(1) {
-    top: 30%;
-}
-
-.ham-menu span:nth-child(3) {
-    top: 70%;
-}
-
-.ham-menu.active span:nth-child(1) {
-    top: 50%;
-    transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.ham-menu.active span:nth-child(2) {
-    opacity: 0;
-}
-
-.ham-menu.active span:nth-child(3) {
-    top: 50%;
-    transform: translate(-50%, -50%) rotate(-45deg);
+li {
+    list-style-type: none;
 }
