--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,13 +8,27 @@
     src: url("/assets/MartianMono-VariableFont_wdth,wght.ttf");
 }
 
-:root {
-    --zwart: #222226;
-    --grijs: #666666;
-    --wit: #FFFFFF;
-    --blauw: rgb(54, 75, 247);
+body {
+    --primary-font: "Archivo", verdana;
+    --secondary-font: "Martian Mono", sans-serif;
+    --letter-spacing: -0.04em;
+
+    --white: #ffffff;
+    --black: #000000;
+    --grey: #666666;
+    --blue: #364bf7;
+
+    --size-xs: 0.5rem;
+    --size-sm: 1rem;
+    --size-md: 2rem;
+    --size-lg: 3rem;
+    --size-xl: 4rem;
+    --size-xxl: 6rem;
 
     --border: 1px solid black;
+
+    background: var(--white);
+    font-family: var(--primary-font);
 }
 
 /* CSS reset */
@@ -28,29 +42,24 @@ body {
     position: relative;
 
     @media (width > 44rem) {
-        margin: 1rem;
+        margin: var(--size-sm);
         border: var(--border);
     }
 }
 
 /* FONTS STANDAARD */
-p {
-    font-family: "archivo";
-    font-size: 1rem;
-
-    @media (width > 30rem) {
-        font-size: 1.25rem;
-    }
-
-    @media (width > 48rem) {
-        font-size: 1.5rem;
-    }
+p,
+.sm {
+  font-size: clamp(var(--size-sm), 2.5vw, 1.125rem);
+  font-weight: 400; /* stays regular */
+  letter-spacing: 0;
+  line-height: clamp(1.5rem, 2.5vw, var(--size-md));
 }
 
 p.label {
     font-weight: light;
     border: var(--border);
-    padding: 4px;
+    padding: 0 4px;
     width: fit-content;
     font-size: 1rem;
     text-transform: uppercase;
@@ -62,7 +71,7 @@ p.label {
 
 p.data {
     font-family: "martianmono";
-    font-size: 1rem;
+    font-size: var(--size-sm);
     text-transform: uppercase;
 }
 
@@ -70,69 +79,58 @@ a {
     font-family: "martianmono";
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: var(--size-sm);
 
 }
 
 a.blauwe-link {
-    color: var(--blauw);
+    color: var(--blue);
 }
 
-h1 {
-    font-family: "archivo";
-    font-size: 3em;
-    line-height: 3rem;
-    text-transform: uppercase;
-    font-weight: 600;
-
-    @media (width > 30rem) {
-        font-size: 4rem;
-    }
-
-    @media (width > 48rem) {
-        font-size: 6rem;
-    }
-
-
+h1,
+.xxxl {
+  font-size: clamp(var(--size-xl), 6vw, var(--size-xxl));
+  font-weight: 600; /* stays semibold */
+  letter-spacing: var(--letter-spacing);
+  line-height: clamp(1em, 5vw, var(--size-xxl));
+  text-transform: uppercase;
 }
 
-h2 {
+h2,
+.xxl {
+  font-size: clamp(var(--size-md), 5vw, var(--size-xl));
+  font-weight: 600; /* stays semibold */
+  letter-spacing: var(--letter-spacing);
+  line-height: 3rem;
+  text-transform: uppercase;
+  hyphens: auto;
+}
+
+h3,
+.xl {
+  font-size: clamp(var(--size-md), 4vw, 3rem);
+  font-weight: 400; /* regular on sm | semiBold on md+ */
+  letter-spacing: var(--letter-spacing);
+  line-height: clamp(1.5rem, 3.5vw, 1em);
+  text-transform: uppercase;
+}
+
+h4,
+.lg {
+  font-size: clamp(1.5rem, 3.5vw, var(--size-md));
+  font-weight: 400; /* stays regular */
+  letter-spacing: 0;
+  line-height: clamp(var(--size-md), 3vw, 2.5rem);
+  text-transform: none;
+}
+
+.visually-hidden {
     display: none;
-}
-
-h3 {
-    font-family: "archivo";
-    text-transform: uppercase;
-    font-size: 2rem;
-    hyphens: auto;
-
-    @media (width > 30rem) {
-        font-size: 2.5rem;
-    }
-
-    @media (width > 48rem) {
-        font-size: 3rem;
-    }
-}
-
-h4 {
-    font-family: "archivo";
-    font-size: 1.5rem;
-    font-weight: 300;
-
-    @media (width > 30rem) {
-        font-size: 1.75rem;
-    }
-
-    @media (width > 48rem) {
-        font-size: 2rem;
-    }
 }
 
 li {
     list-style-type: none;
 }
-
 
 
 header {
@@ -143,11 +141,11 @@ header {
         height: 40px;
 
         @media (width > 30rem) {
-            height: 60px;
+            height: 3.75rem;
         }
 
         @media (width > 48rem) {
-            height: 80px;
+            height: 5rem;
         }
     }
 }
@@ -159,13 +157,13 @@ section.home {
     margin: auto;
 
     a {
-        color: var(--zwart);
-        line-height: 1rem;
+        color: var(--black);
+        line-height: var(--size-sm);
     }
 
     h1 {
         padding-top: 1.75rem;
-        padding-bottom: 1rem;
+        padding-bottom: var(--size-sm);
     }
 
     p {
@@ -175,17 +173,17 @@ section.home {
     @media (width > 30rem) {}
 
     @media (width > 48rem) {
-        padding-top: 1rem;
+        padding-top: var(--size-sm);
         max-width: 56.25em;
 
         h1 {
             margin-top: 1.75rem;
-            margin-bottom: 1rem;
+            margin-bottom: var(--size-sm);
         }
 
         p {
             line-height: 2.5rem;
-            padding-top: 1rem;
+            padding-top: var(--size-sm);
         }
     }
 }
@@ -208,8 +206,8 @@ section.trending {
     }
 
     .data {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+        margin-top: var(--size-sm);
+        margin-bottom: var(--size-sm);
     }
 
     h3 {
@@ -218,14 +216,14 @@ section.trending {
 
     a.blauwe-link {
         display: block;
-        margin-bottom: 24px;
+        margin-bottom: 1.5rem;
     }
 
     @media (width > 30rem) {
         article {
             display: grid;
             grid-template-columns: 14em 1fr;
-            gap: 1rem;
+            gap: var(--size-sm);
             /* align-items: stretch */
         }
 
@@ -263,7 +261,7 @@ section.trending {
         article {
             display: flex;
             border-right: var(--border);
-            padding: 3rem;
+            padding: var(--size-lg);
             flex-direction: column;
         }
 
@@ -293,7 +291,7 @@ section.search {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    padding: 3rem 1.5rem;
+    padding: var(--size-lg) 1.5rem;
     border-top: var(--border);
 
     @media (width > 30rem) {
@@ -308,7 +306,7 @@ section.search {
 
 section.eventlist {
     ul {
-        padding: 1rem 1.5rem;
+        padding: var(--size-lg) 1.5rem;
         border-top: var(--border);
 
         @media (width > 30rem) {
@@ -319,13 +317,13 @@ section.eventlist {
         }
 
         @media (width > 48rem) {
-            padding: 3rem;
+            padding: var(--size-lg);
         }
     }
 
     li {
         border-top: var(--border);
-        margin-bottom: 2rem;
+        margin-bottom: var(--size-md);
     }
 
     li:first-child {
@@ -333,16 +331,16 @@ section.eventlist {
     }
 
     .label {
-        margin-top: 2rem;
+        margin-top: var(--size-md);
     }
 
     h4 {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+        margin-top: var(--size-sm);
+        margin-bottom: var(--size-sm);
     }
 
     .data {
-        margin-bottom: 1rem;
+        margin-bottom: var(--size-sm);
     }
 }
 
@@ -354,9 +352,9 @@ section.eventlist {
 
     p {
         font-family: "martianmono";
-        font-size: 1rem;
+        font-size: var(--size-sm);
         text-transform: uppercase;
-        color: var(--blauw);
+        color: var(--blue);
     }
 }
 
@@ -367,7 +365,7 @@ section.verleden {
 
     li {
         border-top: var(--border);
-        margin-bottom: 2rem;
+        margin-bottom: var(--size-md);
     }
 
     li:first-child {
@@ -375,32 +373,32 @@ section.verleden {
     }
 
     .label {
-        margin-top: 2rem;
-        color: var(--zwart);
+        margin-top: var(--size-md);
+        color: var(--black);
     }
 
     h4 {
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+        margin-top: var(--size-sm);
+        margin-bottom: var(--size-sm);
     }
 
     .data {
-        margin-bottom: 1rem;
-        color: var(--zwart);
+        margin-bottom: var(--size-sm);
+        color: var(--black);
     }
 
     p {
         text-transform: uppercase;
         font-family: "martianmono";
-        color: var(--blauw);
-        margin-bottom: 1rem;
-        font-size: 1rem;
+        color: var(--blue);
+        margin-bottom: var(--size-sm);
+        font-size: var(--size-sm);
     }
 
     @media (width > 44rem) {
         .flex-container {
             display: flex;
-            gap: 1rem;
+            gap: var(--size-sm);
         }
 
         .flex-item {
@@ -408,7 +406,7 @@ section.verleden {
         }
 
         @media (width > 48rem) {
-            padding: 3rem;
+            padding: var(--size-lg);
         }
     }
 }
@@ -485,7 +483,7 @@ section.thanks {
         font-family: "archivo";
         text-transform: none;
         text-decoration: underline;
-        color: var(--zwart);
+        color: var(--black);
     }
 
     li {
@@ -524,7 +522,7 @@ footer {
         }
 
         p {
-            font-size: 1rem;
+            font-size: var(--size-sm);
         }
     }
 }
@@ -545,18 +543,18 @@ section.bottom {
         font-family: "archivo";
         text-transform: none;
         text-decoration: underline;
-        color: var(--zwart);
+        color: var(--black);
     }
 
     .socials {
         display: flex;
-        gap: 1rem;
+        gap: var(--size-sm);
         padding-bottom: 1.5rem;
     }
 
     @media (width > 30rem) {
         p {
-            font-size: 1rem;
+            font-size: var(--size-sm);
         }
     }
 
@@ -570,7 +568,7 @@ section.bottom {
 
 /* HAMBURGER MENU */
 .off-screen-menu {
-    background-color: var(--wit);
+    background-color: var(--white);
     height: 100vh;
     width: 100%;
     max-width: 450px;
@@ -587,10 +585,10 @@ section.bottom {
     opacity: 100%;
 
     a {
-        font-size: 1rem;
+        font-size: var(--size-sm);
     }
     img {
-        height: 1rem;
+        height: var(--size-sm);
     }
 
     @media (width > 66rem) {
@@ -602,17 +600,17 @@ section.bottom {
         ul {
             display: flex;
             flex-direction: row;
-            gap: 1rem;
+            gap: var(--size-sm);
         }
 
         .right-container {
             margin-left: auto;
             display: flex;
-            gap: 1rem;
+            gap: var(--size-sm);
         }
 
         a {
-            color: var(--zwart);
+            color: var(--black);
         }
     }
 
@@ -630,7 +628,7 @@ nav {
     padding: .75rem 1rem .75rem 1rem;
     display: flex;
     border-bottom: var(--border);
-    background-color: var(--wit);
+    background-color: var(--white);
 
     @media (width > 30rem) {
         font-size: 1.25rem;
@@ -643,7 +641,11 @@ nav {
     @media (width > 66rem) {
         font-size: 1.5rem;
         border-bottom: none;
-        padding: 3rem;
+        padding: var(--size-lg);
+
+        a.blauwe-link {
+            color: var(--blue);
+        }
     }
 }
 
@@ -672,7 +674,7 @@ body:has(header .active) {
     border: 1px solid;
     height: 2.5rem;
     width: 2.5rem;
-    background-color: var(--wit);
+    background-color: var(--white);
 
     @media (width > 66rem) {
         display: none;
@@ -686,7 +688,7 @@ body:has(header .active) {
 .ham-menu span {
     height: 3px;
     width: 24px;
-    background-color: var(--zwart);
+    background-color: var(--black);
     position: absolute;
     left: 50%;
     top: 50%;
