--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,6 +134,7 @@ h4,
     align-items: center;
     background-color: var(--white);
     font-family: var(--secondary-font);
+    width: fit-content;
     
     span {
         padding: .75rem;
@@ -688,6 +689,7 @@ header::before {
     left: 0;
     top: 0;
     transition: background-color 0.4s ease-out;
+    pointer-events: none;
 }
 
 body:has(header .active) {
