big update css detailpagina

--- a/styles/detailpagina.css
+++ b/styles/detailpagina.css
@@ -2,43 +2,62 @@
     font-family: "archivo";
     src: url("/assets/Archivo-VariableFont_wdth,wght.ttf");
 }
-
 @font-face {
     font-family: "martianmono";
     src: url("/assets/MartianMono-VariableFont_wdth,wght.ttf");
 }
 
+/* ROOT */
 body {
-    --zwart: #222226;
-    --grijs: #666666;
-    --wit: #FFFFFF;
-    --blauw: rgb(54, 75, 247);
+    --primary-font: "Archivo", verdana;
+    --secondary-font: "Martian Mono", sans-serif;
+    --letter-spacing: -0.04em;
+
+    --white: #ffffff;
+    --black: #000000;
+    --grey: #666666;
+    --blue: #364bf7;
+
+    --size-xs: 0.5rem;
+    --size-sm: 1rem;
+    --size-md: 2rem;
+    --size-lg: 3rem;
+    --size-xl: 4rem;
+    --size-xxl: 6rem;
 
     --border: 1px solid black;
+
+    background: var(--white);
+    font-family: var(--primary-font);
 }
 
+/* CSS RESET */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    position: relative;
 
-p {
-    font-family: "archivo";
-    font-size: 1rem;
-
-    @media (width > 30rem) {
-        font-size: 1.25rem;
+    @media (width > 44rem) {
+        margin: var(--size-sm);
+        border: var(--border);
     }
+}
 
-    @media (width > 48rem) {
-        font-size: 1.5rem;
-    }
+/* FONTS STANDAARD */
+p,
+.sm {
+  font-size: clamp(var(--size-sm), 2.5vw, 1.125rem);
+  font-weight: 400; /* stays regular */
+  letter-spacing: 0;
+  line-height: clamp(1.5rem, 2.5vw, var(--size-md));
 }
 p.label {
     font-weight: light;
     border: var(--border);
-    padding: 4px;
+    padding: 0 4px;
     width: fit-content;
     font-size: 1rem;
     text-transform: uppercase;
@@ -49,7 +68,7 @@ p.label {
 }
 p.data {
     font-family: "martianmono";
-    font-size: 1rem;
+    font-size: var(--size-sm);
     text-transform: uppercase;
 }
 
@@ -57,50 +76,441 @@ a {
     font-family: "martianmono";
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 1rem;
-    color: var(--zwart);
+    font-size: var(--size-sm);
+
 }
 a.blauwe-link {
-    color: var(--blauw);
+    color: var(--blue);
 }
 
-h1 {
-    font-family: "archivo";
-    font-size: 3em;
-    line-height: 3rem;
-    text-transform: uppercase;
-    font-weight: 600;
-
-    @media (width > 30rem) {
-        font-size: 4rem;
-    }
-
-    @media (width > 48rem) {
-        font-size: 6rem;
-    }
-
-
+h1,
+.xxxl {
+  font-size: clamp(var(--size-xl), 6vw, var(--size-xxl));
+  font-weight: 600; /* stays semibold */
+  letter-spacing: var(--letter-spacing);
+  line-height: clamp(1em, 5vw, var(--size-xxl));
+  text-transform: uppercase;
 }
-
-h2 {
+h2,
+.xxl {
+  font-size: clamp(var(--size-md), 5vw, var(--size-xl));
+  font-weight: 600; /* stays semibold */
+  letter-spacing: var(--letter-spacing);
+  line-height: 3rem;
+  text-transform: uppercase;
+  hyphens: auto;
+}
+h3,
+.xl {
+  font-size: clamp(var(--size-md), 4vw, 3rem);
+  font-weight: 600; /* regular on sm | semiBold on md+ */
+  letter-spacing: var(--letter-spacing);
+  line-height: clamp(1.5rem, 3.5vw, 1em);
+  text-transform: uppercase;
+}
+h4,
+.lg {
+  font-size: clamp(1.5rem, 3.5vw, var(--size-md));
+  font-weight: 400; /* stays regular */
+  letter-spacing: 0;
+  line-height: clamp(var(--size-md), 3vw, 2.5rem);
+  text-transform: none;
+}
+.visually-hidden {
     display: none;
 }
 
-h3 {
-    font-family: "archivo";
-    text-transform: uppercase;
-    font-size: 2rem;
-    hyphens: auto;
+/* OVERIGE ALGEMENE STYLING */
+.btn {
+    border: var(--border);
+    display: flex;
+    align-items: center;
+    background-color: var(--white);
+    font-family: var(--secondary-font);
+    width: fit-content;                 /* zorgt dat border niet plakt in uitklap nav */
+    color: var(--black);
 
-    @media (width > 30rem) {
-        font-size: 2.5rem;
+    
+    span {
+        padding: .75rem;
+        border-right: var(--border);
     }
+    div {
+        height: 2.5rem;
+        width: 2.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    img {
+        height: 1rem;
+        width: 1rem;
+    }
+}
+li {
+    list-style-type: none;
+}
 
-    @media (width > 48rem) {
-        font-size: 3rem;
+
+header {
+    top: 0;
+    position: sticky;
+
+    img {
+        height: 40px;
+
+        @media (width > 30rem) {
+            height: 3.75rem;
+        }
+
+        @media (width > 48rem) {
+            height: 5rem;
+        }
     }
 }
 
-li {
-    list-style-type: none;
+section.top {
+    padding: var(--size-xxl) var(--size-sm) 0rem;
+    background-color: rgba(0, 0, 0, 0);
+    text-align: center;
+    margin: auto;
+
+    a {
+        color: var(--black);
+        line-height: var(--size-sm);
+    }
+
+    h1 {
+        margin-top: var(--size-sm);
+        margin-bottom: var(--size-sm);
+    }
+
+    img.height {
+        margin-top: var(--size-lg);
+    }
+
+    p {
+        line-height: 1.75rem;
+    }
+
+    @media (width > 48rem) {
+        padding-top: var(--size-sm);
+        max-width: 56.25em;
+
+        h1 {
+            margin-top: var(--size-sm);
+            margin-bottom: var(--size-sm);
+        }
+
+        p {
+            line-height: 2.5rem;
+            /* padding-top: var(--size-sm); */
+        }
+    }
+}
+
+section.info {
+    padding: 1.5rem var(--size-sm) 0;
+
+    .groot {
+        padding-top: var(--size-lg);
+        padding-bottom: var(--size-md);
+        font-size: 1.5rem;
+        font-weight: 400;
+    }
+}
+
+section.tabellen {
+    padding: var(--size-lg) var(--size-sm) 0;
+    
+    .table2 {
+        padding-top: var(--size-md);
+    }
+
+    /* FORM STYLING */
+
+    a {
+        margin-top: var(--size-lg);
+    }
+}
+
+section.locatie {
+    padding: var(--size-xl) var(--size-sm) var(--size-xxl);
+    margin: auto;
+    text-align: center;
+
+    img.height {
+        border: var(--border);
+        margin-bottom: var(--size-sm);
+    }
+    h4.xl {
+        padding-top: var(--size-md);
+        padding-bottom: var(--size-md);
+    }
+}
+
+/* FOOTER */
+.first {
+    border-top: var(--border);
+    padding: 4rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    img#logo {
+        height: 5rem;
+        margin-right: auto;
+    }
+}
+
+.second {
+    border-top: var(--border);
+    padding: 4rem 1.5rem;
+
+    a {
+        font-family: "archivo";
+        text-transform: none;
+        text-decoration: underline;
+        color: var(--black);
+    }
+
+    li {
+        padding-bottom: 8px;
+    }
+
+    li:last-child {
+        padding-bottom: 0px;
+    }
+}
+
+.third {
+    padding: 4rem 1.5rem;
+
+    a {
+        hyphens: auto;
+    }
+}
+
+footer {
+    @media (width > 30rem) {
+        border-top: var(--border);
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        .first,
+        .second,
+        .third {
+            border-top: 0px;
+            border-bottom: 0px;
+        }
+
+        .second,
+        .third {
+            border-left: var(--border);
+        }
+
+        p {
+            font-size: var(--size-sm);
+        }
+    }
+
+    @media (width > 48rem) {
+        border-top: var(--border);
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
+    }
+}
+
+section.bottom {
+    border-top: var(--border);
+    padding: 2.5rem 1.5rem;
+
+    a {
+        font-family: "archivo";
+        text-transform: none;
+        text-decoration: underline;
+        color: var(--black);
+    }
+
+    .socials {
+        display: flex;
+        gap: var(--size-sm);
+    }
+
+    @media (width > 30rem) {
+        p {
+            font-size: var(--size-sm);
+        }
+    }
+
+    @media (width > 48rem) {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+/* HAMBURGER MENU */
+.off-screen-menu {
+    background-color: var(--white);
+    height: 100vh;
+    width: 100%;
+    max-width: 450px;
+    position: fixed;
+    top: 0;
+    right: -450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    padding-left: 1.5rem;
+    transition: .3s ease;
+    opacity: 100%;
+    
+    li {
+        margin-top: 2.5rem;
+    }
+    .align-right {
+        border-top: var(--border);
+        width: 25rem;
+        padding-top: 3rem
+    }
+    a {
+        font-size: var(--size-sm);
+        color: var(--black);
+    }
+    a.blauwe-link {
+        color: var(--blue);
+    }
+    img {
+        height: var(--size-sm);
+    }
+
+    @media (width > 68rem) {
+        position: relative;
+        max-width: 100%;
+        height: fit-content;
+        right: auto;
+
+        ul {
+            display: flex;
+            gap: var(--size-sm);
+            align-items: flex-end;
+        }
+        li {
+            margin-top: 0;
+        }
+        .align-right {
+            margin-left: auto;      /* zorgt voor ruimte in nav */
+            border-top: none;
+            padding-top: 0;
+            width: fit-content;
+        }
+        a {
+            color: var(--black);
+        }
+    }
+
+}
+
+.off-screen-menu.active {
+    right: 0;
+
+    header::before {
+        right: 0;
+    }
+}
+
+nav {
+    padding: .75rem 1rem .75rem 1rem;
+    display: flex;
+    border-bottom: var(--border);
+    background-color: var(--white);
+
+    @media (width > 30rem) {
+        font-size: 1.25rem;
+    }
+
+    @media (width > 44rem) {
+        border-bottom: 0px;
+    }
+
+    @media (width > 68rem) {
+        font-size: 1.5rem;
+        border-bottom: none;
+        padding: var(--size-lg);
+
+        a.blauwe-link {
+            color: var(--blue);
+        }
+    }
+}
+
+header::before {
+    content: '';
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    left: 0;
+    top: 0;
+    transition: background-color 0.4s ease-out;
+    pointer-events: none;
+}
+
+body:has(header .active) {
+    header::before {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+}
+
+.ham-menu {
+    height: 50px;
+    width: 40px;
+    margin-left: auto;
+    position: relative;
+    border: 1px solid;
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: var(--white);
+
+    @media (width > 68rem) {
+        display: none;
+    }
+}
+
+.ham-menu.active {
+    position: sticky;
+}
+
+.ham-menu span {
+    height: 3px;
+    width: 24px;
+    background-color: var(--black);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: .3s ease;
+}
+
+.ham-menu span:nth-child(1) {
+    top: 30%;
+}
+
+.ham-menu span:nth-child(3) {
+    top: 70%;
+}
+
+.ham-menu.active span:nth-child(1) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.ham-menu.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
