--- a/styles/detailpagina.css
+++ b/styles/detailpagina.css
@@ -1,11 +1,12 @@
 @font-face {
-    font-family: "archivo";
-    src: url("./assets/Archivo-VariableFont_wdth,wght.ttf");
-}
-@font-face {
-    font-family: "martianmono";
-    src: url("./assets/MartianMono-VariableFont_wdth,wght.ttf");
-}
+    font-family: "Archivo";
+    src: url(./fonts/Archivo-VariableFont.woff2) format("woff2");
+  }
+  
+  @font-face {
+    font-family: "Martian Mono";
+    src: url(./fonts/MartianMono-VariableFont.woff2) format("woff2");
+  }
 
 /* CSS RESET */
 * {
