--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "archivo";
-    src: url("/assets/Archivo-VariableFont_wdth,wght.ttf");
-}
-
-@font-face {
+    src: url(./fonts/Archivo-VariableFont.woff2) format("woff2");
+  }
+  
+  @font-face {
     font-family: "martianmono";
-    src: url("/assets/MartianMono-VariableFont_wdth,wght.ttf");
-}
+    src: url(./fonts/MartianMono-VariableFont.woff2) format("woff2");
+  }
 
 body {
     --primary-font: "Archivo", verdana;
