--- a/styles/detailpagina.css
+++ b/styles/detailpagina.css
@@ -1,12 +1,11 @@
 @font-face {
     font-family: "archivo";
-    src: url(./fonts/Archivo-VariableFont.woff2) format("woff2");
-  }
-  
-  @font-face {
+    src: url
+}
+@font-face {
     font-family: "martianmono";
-    src: url(./fonts/MartianMono-VariableFont.woff2) format("woff2");
-  }
+    src: url("/assets/MartianMono-VariableFont_wdth,wght.ttf") format('truetype');
+}
 
 /* CSS RESET */
 * {
@@ -261,6 +260,19 @@ section.tabellen {
         * {
             grid-column: 2;
         }
+
+        form {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: var(--size-sm);
+        }
+        .left-container {
+            grid-column: 1;
+        }
+        .right-container {
+            grid-column: 2;
+        }
+        
 
     }
 }
