--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "archivo";
-    src: url(./fonts/Archivo-VariableFont.woff2) format("woff2");
-  }
-  
-  @font-face {
+    src: url("/assets/Archivo-VariableFont_wdth,wght.ttf");
+}
+
+@font-face {
     font-family: "martianmono";
-    src: url(./fonts/MartianMono-VariableFont.woff2) format("woff2");
-  }
+    src: url("/assets/MartianMono-VariableFont_wdth,wght.ttf");
+}
 
 body {
     --primary-font: "Archivo", verdana;
