--- a/styles/detailpagina.css
+++ b/styles/detailpagina.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: "martianmono";
-    src: url("/assets/MartianMono-VariableFont_wdth,wght.ttf") format('truetype');
+    src: url("../fonts/MartianMono-VariableFont.woff2") format('woff2');
 }
 
 /* CSS RESET */
