hopelijk laatste test

--- a/styles/dda-gezamenlijk.css
+++ b/styles/dda-gezamenlijk.css
@@ -2,8 +2,8 @@
    worden door jullie projecten */
 
 body {
-  --primary-font: "Archivo", verdana;
-  --secondary-font: "Martian Mono", sans-serif;
+  --primary-font: "archivo", verdana;
+  --secondary-font: "martianmono", sans-serif;
   --white: #ffffff;
   --black: #000000;
   --grey: #666666;
