--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
-    --primary-font: "Archivo", verdana;
-    --secondary-font: "Martian Mono", sans-serif;
+    --primary-font: "archivo", verdana;
+    --secondary-font: "martianmono", sans-serif;
     --letter-spacing: -0.04em;
 
     --white: #ffffff;
