--- a/styles/styles.css
+++ b/styles/styles.css
@@ -527,6 +527,12 @@ div.logos {
     a {
         hyphens: auto;
     }
+    .margin {
+        margin-top: var(--size-md);
+        display: flex;
+        flex-direction: column;
+        gap: var(--size-xs);
+    }
 }
 
 footer {
